--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,4 +1,4 @@
-@import url('/home/eli/.cache/wal/colors-waybar.css');
+@import url('/home/ito/.cache/wal/colors-waybar.css');
 
 @define-color mauve  @color9;
 @define-color red  @color9;
@@ -24,8 +24,8 @@
 window {
     all:unset;
     padding: 20px;
-    border-radius: 0px;
-    background-color: alpha(@background,.5);
+    border-radius: 10px;
+    background-color: alpha(@background,0.95);
 }
 #inner-box {
     margin: 2px;
@@ -49,7 +49,7 @@ window {
     border: none;
     outline: none;
     color: @text;
-    box-shadow: 1px 1px 5px rgba(0,0,0, .5);
+    box-shadow: 1px 1px 5px rgba(0,0,0, .75);
     border-radius:10;
     background-color: alpha(@background,.2);
 }
