--- a/.config/waybar/themes/default/style-default.css
+++ b/.config/waybar/themes/default/style-default.css
@@ -137,6 +137,12 @@ tooltip {
     color:rgba(255,255,255,.2);
     text-shadow: 0px 0px 2px rgba(255, 255, 255, .5);
 }
+#custom-power {
+    color:rgba(255,0,0,.5);
+}
+#custom-power:hover {
+    color:rgba(255,0,0,1);
+}
 #custom-colorpicker{
     padding: 0px 5px;
 }
